gpio: vf610: add locking to gpio direction functions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -30980,6 +30980,7 @@
 	patches.suse/bpf-Fix-deadlock-when-freeing-cgroup-storage.patch
 	patches.suse/net-Add-rx_skb-of-kfree_skb-to-raw_tp_null_args.patch
 	patches.suse/power-supply-da9150-fg-fix-potential-overflow.patch
+	patches.suse/gpio-vf610-add-locking-to-gpio-direction-functions.patch
 	patches.suse/mtd-rawnand-cadence-fix-error-code-in-cadence_nand_i.patch
 	patches.suse/mtd-rawnand-cadence-use-dma_map_resource-for-sdma-ad.patch
 	patches.suse/mtd-rawnand-cadence-fix-incorrect-device-in-dma_unma.patch
