blacklist.conf: Add b8c7a1ac884c ("gpiolib: of: Move Atmel HSMCI quirk up out of the regulator comment")
The code being moved around needs CONFIG_MMC_ATMELMCI, which depends on
CONFIG_ARCH_AT91, which we do not support, so it's a no-op for us.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -970,3 +970,4 @@ c0e473a0d226479e8e925d5ba93f751d8df628e9 # CVE-2025-38073 https://bugzilla.suse.
 a82b26451de126a5ae130361081986bc459afe9b # not applicable
 37733bffda3285d18bd1d72c14b3a1cf39c56a5e # cleanup breaking kABI
 ab680dc6c78aa035e944ecc8c48a1caab9f39924 # CVE-2025-37907 https://bugzilla.suse.com/show_bug.cgi?id=1243464#c14
+b8c7a1ac884cc267d1031f8de07f1a689a69fbab # CONFIG_ARCH_AT91=n
