--- a/blacklist.conf
+++ b/blacklist.conf
@@ -971,3 +971,4 @@ a82b26451de126a5ae130361081986bc459afe9b # not applicable
 37733bffda3285d18bd1d72c14b3a1cf39c56a5e # cleanup breaking kABI
 ab680dc6c78aa035e944ecc8c48a1caab9f39924 # CVE-2025-37907 https://bugzilla.suse.com/show_bug.cgi?id=1243464#c14
 b8c7a1ac884cc267d1031f8de07f1a689a69fbab # CONFIG_ARCH_AT91=n
+3e8b7238b427e05498034c240451af5f5495afda # depends on many other changes, not worth it
