blacklist.conf: Add 2 gpio-pca953x commits
6.6-stable lists these 2 commits as dependencies of 7cef813a91c4
("gpio: pca953x: log an error when failing to get the reset GPIO")
which we want. However they are not actual dependencies, and too
intrusive to be backported without a good reason.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -972,3 +972,5 @@ a82b26451de126a5ae130361081986bc459afe9b # not applicable
 ab680dc6c78aa035e944ecc8c48a1caab9f39924 # CVE-2025-37907 https://bugzilla.suse.com/show_bug.cgi?id=1243464#c14
 b8c7a1ac884cc267d1031f8de07f1a689a69fbab # CONFIG_ARCH_AT91=n
 3e8b7238b427e05498034c240451af5f5495afda # depends on many other changes, not worth it
+2f4d3e293392571e02b106c8b431b638bd029276 # fake dependency, too intrusive
+53c59d66c44c5eb98b34da9967f937e5387f8624 # fake dependency, too intrusive
