--- a/series.conf
+++ b/series.conf
@@ -10063,6 +10063,7 @@
 	patches.suse/KVM-TDX-Report-supported-optional-TDVMCALLs-in-TDX-c.patch
 	patches.suse/KVM-SVM-Reject-SEV-ES-intra-host-migration-if-vCPU-c.patch
 	patches.suse/KVM-x86-xen-Allow-out-of-range-event-channel-ports-i.patch
+	patches.suse/Documentation-KVM-Fix-unexpected-unindent-warnings.patch
 	patches.suse/KVM-x86-avoid-underflow-when-scaling-TSC-frequency.patch
 	patches.suse/net-phy-qcom-move-the-WoL-function-to-shared-library.patch
 	patches.suse/net-phy-qcom-qca808x-Fix-WoL-issue-by-utilizing-at80.patch
