--- a/blacklist.conf
+++ b/blacklist.conf
@@ -975,3 +975,4 @@ b8c7a1ac884cc267d1031f8de07f1a689a69fbab # CONFIG_ARCH_AT91=n
 2f4d3e293392571e02b106c8b431b638bd029276 # fake dependency, too intrusive
 53c59d66c44c5eb98b34da9967f937e5387f8624 # fake dependency, too intrusive
 3645ffaf2b334abaf5f53e5ca0f47465d91e69d2 # CONFIG_MIPS=n
+f8d76c2c313c56d5cb894a243dff4550f048278d # CONFIG_TOUCHSCREEN_TSC2005=n
