KVM: TDX: Don't report base TDVMCALLs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10139,6 +10139,7 @@
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 	patches.suse/drm-mediatek-Add-wait_event_timeout-when-disabling-p.patch
 	patches.suse/drm-mediatek-only-announce-AFBC-if-really-supported.patch
+	patches.suse/KVM-TDX-Don-t-report-base-TDVMCALLs.patch
 	patches.suse/Documentation-KVM-Fix-unexpected-unindent-warning.patch
 	patches.suse/KVM-x86-Reject-KVM_SET_TSC_KHZ-vCPU-ioctl-for-TSC-pr.patch
 	patches.suse/KVM-VMX-Ensure-unused-kvm_tdx_capabilities-fields-ar.patch
