--- a/series.conf
+++ b/series.conf
@@ -23012,6 +23012,7 @@
 	patches.suse/Bluetooth-hci_sync-Add-helper-functions-to-manipulat.patch
 	patches.suse/Bluetooth-hci_sync-Attempt-to-dequeue-connection-att.patch
 	patches.suse/Bluetooth-hci_sync-Fix-UAF-on-hci_abort_conn_sync-7453847.patch
+	patches.suse/Bluetooth-hci_sync-Fix-UAF-on-create_le_conn_complet.patch
 	patches.suse/Bluetooth-hci_qca-don-t-use-IS_ERR_OR_NULL-with-gpio.patch
 	patches.suse/Bluetooth-btintel-Fixe-build-regression.patch
 	patches.suse/Bluetooth-hci_sync-Use-QoS-to-determine-which-PHY-to.patch
