rpm/kernel-binary.spec.in: Ignore return code from ksymtypes compare
When using suse-kabi-tools, the RPM build invokes 'ksymvers compare' to
compare the resulting symbol CRCs with the reference data. If the values
differ, it then invokes 'ksymtypes compare' to provide a detailed report
explaining why the symbols differ. The build expects the latter
'ksymtypes compare' command to always return zero, even if the two
compared kABI corpuses are different.

This is currently the case for 'ksymtypes compare'. However, I plan to
update the command to return a non-zero code when the comparison detects
any differences. This should ensure consistent behavior with 'ksymvers
compare'.

Since the build uses 'ksymtypes compare' only for more detailed
diagnostics, ignore its return code.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -1268,7 +1268,7 @@ if [ %CONFIG_MODULES = y ]; then
             ksymtypes compare %{?_smp_mflags} \
                 --filter-symbol-list=%my_builddir/changed-exports \
                 %my_builddir/kabi/%cpu_arch/symtypes-%build_flavor \
-                %my_builddir/symtypes-%build_flavor
+                %my_builddir/symtypes-%build_flavor || true
         %endif
 
 	# %ignore_kabi_badness is defined in the Kernel:* projects in the
