iommu/vt-d: Fix system hang on reboot -f (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31503,6 +31503,7 @@
 	patches.suse/scsi-lpfc-Restore-clearing-of-NLP_UNREG_INP-in-ndlp-nlp_fl.patch
 	patches.suse/scsi-st-ERASE-does-not-change-tape-location.patch
 	patches.suse/scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELEC.patch
+	patches.suse/iommu-vt-d-Fix-system-hang-on-reboot-f.patch
 	patches.suse/coredump-Fixes-core_pipe_limit-sysctl-proc_handler.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990B-composit.patch
 	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
