--- a/series.conf
+++ b/series.conf
@@ -33139,6 +33139,7 @@
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.suse/platform-x86-ideapad-laptop-Fix-kbd-backlight-not-re.patch
 	patches.suse/drm-sched-Remove-optimization-that-causes-hang-when-.patch
+	patches.suse/drm-bridge-ti-sn65dsi86-Remove-extra-semicolon-in-ti.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
