drm/sched: Remove optimization that causes hang when killing dependent jobs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33138,6 +33138,7 @@
 	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.suse/platform-x86-ideapad-laptop-Fix-kbd-backlight-not-re.patch
+	patches.suse/drm-sched-Remove-optimization-that-causes-hang-when-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
