--- a/series.conf
+++ b/series.conf
@@ -54138,6 +54138,7 @@
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.suse/platform-x86-Fix-initialization-order-for-firmware_a.patch
 	patches.suse/drm-amdgpu-Reset-the-clear-flag-in-buddy-during-resu.patch
+	patches.suse/Revert-drm-nouveau-check-ioctl-command-codes-better.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
