--- a/series.conf
+++ b/series.conf
@@ -54136,6 +54136,7 @@
 	patches.suse/usb-musb-fix-gadget-state-on-disconnect.patch
 	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
+	patches.suse/platform-x86-Fix-initialization-order-for-firmware_a.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
