drm/amdgpu: Reset the clear flag in buddy during resume (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54137,6 +54137,7 @@
 	patches.suse/usb-hub-Don-t-try-to-recover-devices-lost-during-war.patch
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.suse/platform-x86-Fix-initialization-order-for-firmware_a.patch
+	patches.suse/drm-amdgpu-Reset-the-clear-flag-in-buddy-during-resu.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Revise-logging-format-for-failed-CT-MIB-re.patch
