--- a/series.conf
+++ b/series.conf
@@ -10209,6 +10209,7 @@
 	patches.suse/platform-mellanox-mlxbf-pmc-Use-kstrtobool-to-check-.patch
 	patches.suse/platform-x86-ideapad-laptop-Fix-FnLock-not-remembere.patch
 	patches.suse/platform-x86-ideapad-laptop-Fix-kbd-backlight-not-re.patch
+	patches.suse/platform-x86-Fix-initialization-order-for-firmware_a.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
