--- a/series.conf
+++ b/series.conf
@@ -10211,6 +10211,7 @@
 	patches.suse/platform-x86-ideapad-laptop-Fix-kbd-backlight-not-re.patch
 	patches.suse/platform-x86-Fix-initialization-order-for-firmware_a.patch
 	patches.suse/drm-amdgpu-Reset-the-clear-flag-in-buddy-during-resu.patch
+	patches.suse/drm-sched-Remove-optimization-that-causes-hang-when-.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
