platform/mellanox: mlxbf-pmc: Use kstrtobool() to check 0/1 input (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10206,6 +10206,7 @@
 	patches.suse/i2c-stm32f7-unmap-DMA-mapped-buffer.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Remove-newline-char-from.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Validate-event-enable-in.patch
+	patches.suse/platform-mellanox-mlxbf-pmc-Use-kstrtobool-to-check-.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
