platform/x86: ideapad-laptop: Fix kbd backlight not remembered among boots (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10208,6 +10208,7 @@
 	patches.suse/platform-mellanox-mlxbf-pmc-Validate-event-enable-in.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Use-kstrtobool-to-check-.patch
 	patches.suse/platform-x86-ideapad-laptop-Fix-FnLock-not-remembere.patch
+	patches.suse/platform-x86-ideapad-laptop-Fix-kbd-backlight-not-re.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
