--- a/series.conf
+++ b/series.conf
@@ -10205,6 +10205,7 @@
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.suse/i2c-stm32f7-unmap-DMA-mapped-buffer.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Remove-newline-char-from.patch
+	patches.suse/platform-mellanox-mlxbf-pmc-Validate-event-enable-in.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
