platform/x86: ideapad-laptop: Fix FnLock not remembered among boots (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10207,6 +10207,7 @@
 	patches.suse/platform-mellanox-mlxbf-pmc-Remove-newline-char-from.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Validate-event-enable-in.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Use-kstrtobool-to-check-.patch
+	patches.suse/platform-x86-ideapad-laptop-Fix-FnLock-not-remembere.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
