drm/bridge: ti-sn65dsi86: Remove extra semicolon in ti_sn_bridge_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10213,6 +10213,7 @@
 	patches.suse/drm-amdgpu-Reset-the-clear-flag-in-buddy-during-resu.patch
 	patches.suse/drm-sched-Remove-optimization-that-causes-hang-when-.patch
 	patches.suse/Revert-drm-nouveau-check-ioctl-command-codes-better.patch
+	patches.suse/drm-bridge-ti-sn65dsi86-Remove-extra-semicolon-in-ti.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
