--- a/series.conf
+++ b/series.conf
@@ -10204,6 +10204,7 @@
 	patches.suse/msft-hv-3300-tools-hv-fcopy-Fix-irregularities-with-size-of-ring-.patch
 	patches.suse/i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.suse/i2c-stm32f7-unmap-DMA-mapped-buffer.patch
+	patches.suse/platform-mellanox-mlxbf-pmc-Remove-newline-char-from.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
