--- a/series.conf
+++ b/series.conf
@@ -2210,6 +2210,7 @@
 	patches.kernel.org/6.15.8-097-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-det.patch
 	patches.kernel.org/6.15.8-098-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-det.patch
 	patches.kernel.org/6.15.8-099-soundwire-amd-fix-for-handling-slave-alerts-af.patch
+	patches.kernel.org/6.15.8-100-phy-use-per-PHY-lockdep-keys.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
