--- a/series.conf
+++ b/series.conf
@@ -2254,6 +2254,7 @@
 	patches.kernel.org/6.15.8-141-net-mlx5-Correctly-set-gso_size-when-LRO-is-us.patch
 	patches.kernel.org/6.15.8-142-net-airoha-fix-potential-use-after-free-in-air.patch
 	patches.kernel.org/6.15.8-143-ipv6-mcast-Delay-put-pmc-idev-in-mld_del_delre.patch
+	patches.kernel.org/6.15.8-144-net-fix-segmentation-after-TCP-UDP-fraglist-GR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
