Fix SMB311 posix special file creation to servers which do not advertise reparse support (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2153,6 +2153,7 @@
 	patches.kernel.org/6.15.8-040-ALSA-hda-realtek-Fix-mute-LED-for-HP-Victus-16.patch
 	patches.kernel.org/6.15.8-041-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix-.patch
 	patches.kernel.org/6.15.8-042-io_uring-poll-fix-POLLERR-handling.patch
+	patches.kernel.org/6.15.8-043-Fix-SMB311-posix-special-file-creation-to-serv.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
