rxrpc: Fix notification vs call-release vs recvmsg (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2268,6 +2268,7 @@
 	patches.kernel.org/6.15.8-155-net-sched-Return-NULL-when-htb_lookup_leaf-enc.patch
 	patches.kernel.org/6.15.8-156-rxrpc-Fix-irq-disabled-in-local_bh_enable.patch
 	patches.kernel.org/6.15.8-157-rxrpc-Fix-recv-recv-race-of-completed-call.patch
+	patches.kernel.org/6.15.8-158-rxrpc-Fix-notification-vs-call-release-vs-recv.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
