nvme: fix misaccounting of nvme-mpath inflight I/O (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2231,6 +2231,7 @@
 	patches.kernel.org/6.15.8-118-smc-Fix-various-oops-due-to-inet_sock-type-con.patch
 	patches.kernel.org/6.15.8-119-net-phy-Don-t-register-LEDs-for-genphy.patch
 	patches.kernel.org/6.15.8-120-nvme-revert-the-cross-controller-atomic-write-.patch
+	patches.kernel.org/6.15.8-121-nvme-fix-misaccounting-of-nvme-mpath-inflight-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
