--- a/series.conf
+++ b/series.conf
@@ -2203,6 +2203,7 @@
 	patches.kernel.org/6.15.8-090-comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
 	patches.kernel.org/6.15.8-091-comedi-das6402-Fix-bit-shift-out-of-bounds.patch
 	patches.kernel.org/6.15.8-092-comedi-comedi_test-Fix-possible-deletion-of-un.patch
+	patches.kernel.org/6.15.8-093-comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
