net: libwx: fix the using of Rx buffer DMA (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2180,6 +2180,7 @@
 	patches.kernel.org/6.15.8-067-mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
 	patches.kernel.org/6.15.8-068-net-stmmac-intel-populate-entire-system_counte.patch
 	patches.kernel.org/6.15.8-069-net-libwx-remove-duplicate-page_pool_put_full_.patch
+	patches.kernel.org/6.15.8-070-net-libwx-fix-the-using-of-Rx-buffer-DMA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
