--- a/series.conf
+++ b/series.conf
@@ -2173,6 +2173,7 @@
 	patches.kernel.org/6.15.8-060-cpuidle-psci-Fix-cpuhotplug-routine-with-PREEM.patch
 	patches.kernel.org/6.15.8-061-dmaengine-mediatek-Fix-a-flag-reuse-error-in-m.patch
 	patches.kernel.org/6.15.8-062-dmaengine-nbpfaxi-Fix-memory-corruption-in-pro.patch
+	patches.kernel.org/6.15.8-063-isofs-Verify-inode-mode-when-loading-from-disk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
