--- a/series.conf
+++ b/series.conf
@@ -2244,6 +2244,7 @@
 	patches.kernel.org/6.15.8-131-riscv-Enable-interrupt-during-exception-handli.patch
 	patches.kernel.org/6.15.8-132-riscv-traps_misaligned-properly-sign-extend-va.patch
 	patches.kernel.org/6.15.8-133-Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_res.patch
+	patches.kernel.org/6.15.8-134-Bluetooth-hci_sync-fix-connectable-extended-ad.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
