--- a/series.conf
+++ b/series.conf
@@ -2126,6 +2126,7 @@
 	patches.kernel.org/6.15.8-013-i2c-omap-Fix-an-error-handling-path-in-omap_i2.patch
 	patches.kernel.org/6.15.8-014-thunderbolt-Fix-wake-on-connect-at-runtime.patch
 	patches.kernel.org/6.15.8-015-thunderbolt-Fix-bit-masking-in-tb_dp_port_set_.patch
+	patches.kernel.org/6.15.8-016-Revert-staging-vchiq_arm-Improve-initial-VCHIQ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
