fix a leak in fcntl_dirnotify() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2225,6 +2225,7 @@
 	patches.kernel.org/6.15.8-112-net-sched-sch_qfq-Fix-race-condition-on-qfq_ag.patch
 	patches.kernel.org/6.15.8-113-rpl-Fix-use-after-free-in-rpl_do_srh_inline.patch
 	patches.kernel.org/6.15.8-114-smb-client-fix-use-after-free-in-cifs_oplock_b.patch
+	patches.kernel.org/6.15.8-115-fix-a-leak-in-fcntl_dirnotify.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
