--- a/series.conf
+++ b/series.conf
@@ -2285,6 +2285,7 @@
 	patches.kernel.org/6.15.8-172-net-libwx-fix-multicast-packets-received-count.patch
 	patches.kernel.org/6.15.8-173-rust-use-used-compiler-to-fix-build-and-modpos.patch
 	patches.kernel.org/6.15.8-174-smb-smbdirect-add-smbdirect_pdu.h-with-protoco.patch
+	patches.kernel.org/6.15.8-175-smb-client-make-use-of-common-smbdirect_pdu.h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
