--- a/series.conf
+++ b/series.conf
@@ -2269,6 +2269,7 @@
 	patches.kernel.org/6.15.8-156-rxrpc-Fix-irq-disabled-in-local_bh_enable.patch
 	patches.kernel.org/6.15.8-157-rxrpc-Fix-recv-recv-race-of-completed-call.patch
 	patches.kernel.org/6.15.8-158-rxrpc-Fix-notification-vs-call-release-vs-recv.patch
+	patches.kernel.org/6.15.8-159-rxrpc-Fix-transmission-of-an-abort-in-response.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
