--- a/series.conf
+++ b/series.conf
@@ -2239,6 +2239,7 @@
 	patches.kernel.org/6.15.8-126-hwmon-corsair-cpro-Validate-the-size-of-the-re.patch
 	patches.kernel.org/6.15.8-127-ice-add-NULL-check-in-eswitch-lag-check.patch
 	patches.kernel.org/6.15.8-128-ice-check-correct-pointer-in-fwlog-debugfs.patch
+	patches.kernel.org/6.15.8-129-usb-net-sierra-check-for-no-status-endpoint.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
