--- a/series.conf
+++ b/series.conf
@@ -2263,6 +2263,7 @@
 	patches.kernel.org/6.15.8-150-hv_netvsc-Set-VF-priv_flags-to-IFF_NO_ADDRCONF.patch
 	patches.kernel.org/6.15.8-151-virtio-net-fix-recursived-rtnl_lock-during-pro.patch
 	patches.kernel.org/6.15.8-152-tls-always-refresh-the-queue-when-reading-sock.patch
+	patches.kernel.org/6.15.8-153-net-vlan-fix-VLAN-0-refcount-imbalance-of-togg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
