smb: smbdirect: add smbdirect.h with public structures (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2286,6 +2286,7 @@
 	patches.kernel.org/6.15.8-173-rust-use-used-compiler-to-fix-build-and-modpos.patch
 	patches.kernel.org/6.15.8-174-smb-smbdirect-add-smbdirect_pdu.h-with-protoco.patch
 	patches.kernel.org/6.15.8-175-smb-client-make-use-of-common-smbdirect_pdu.h.patch
+	patches.kernel.org/6.15.8-176-smb-smbdirect-add-smbdirect.h-with-public-stru.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
