arm64: dts: rockchip: Add cd-gpios for sdcard detect on Cool Pi 4B (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2208,6 +2208,7 @@
 	patches.kernel.org/6.15.8-095-comedi-Fix-use-of-uninitialized-data-in-insn_r.patch
 	patches.kernel.org/6.15.8-096-comedi-Fix-initialization-of-data-for-instruct.patch
 	patches.kernel.org/6.15.8-097-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-det.patch
+	patches.kernel.org/6.15.8-098-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-det.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
