--- a/series.conf
+++ b/series.conf
@@ -2177,6 +2177,7 @@
 	patches.kernel.org/6.15.8-064-memstick-core-Zero-initialize-id_reg-in-h_mems.patch
 	patches.kernel.org/6.15.8-065-mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
 	patches.kernel.org/6.15.8-066-mmc-sdhci-pci-Quirk-for-broken-command-queuing.patch
+	patches.kernel.org/6.15.8-067-mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
