--- a/series.conf
+++ b/series.conf
@@ -2218,6 +2218,7 @@
 	patches.kernel.org/6.15.8-105-bpf-Reject-p-format-string-in-bprintf-like-hel.patch
 	patches.kernel.org/6.15.8-106-selftests-sched_ext-Fix-exit-selftest-hang-on-.patch
 	patches.kernel.org/6.15.8-107-wifi-iwlwifi-mask-reserved-bits-in-chan_state_.patch
+	patches.kernel.org/6.15.8-108-cachefiles-Fix-the-incorrect-return-value-in-_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
