--- a/series.conf
+++ b/series.conf
@@ -2272,6 +2272,7 @@
 	patches.kernel.org/6.15.8-159-rxrpc-Fix-transmission-of-an-abort-in-response.patch
 	patches.kernel.org/6.15.8-160-rxrpc-Fix-to-use-conn-aborts-for-conn-wide-fai.patch
 	patches.kernel.org/6.15.8-161-Revert-cgroup_freezer-cgroup_freezing-Check-if.patch
+	patches.kernel.org/6.15.8-162-drm-mediatek-Add-wait_event_timeout-when-disab.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
