--- a/series.conf
+++ b/series.conf
@@ -2276,6 +2276,7 @@
 	patches.kernel.org/6.15.8-163-drm-mediatek-only-announce-AFBC-if-really-supp.patch
 	patches.kernel.org/6.15.8-164-libbpf-Fix-handling-of-BPF-arena-relocations.patch
 	patches.kernel.org/6.15.8-165-efivarfs-Fix-memory-leak-of-efivarfs_fs_info-i.patch
+	patches.kernel.org/6.15.8-166-sched-Change-nr_uninterruptible-type-to-unsign.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
