--- a/series.conf
+++ b/series.conf
@@ -2264,6 +2264,7 @@
 	patches.kernel.org/6.15.8-151-virtio-net-fix-recursived-rtnl_lock-during-pro.patch
 	patches.kernel.org/6.15.8-152-tls-always-refresh-the-queue-when-reading-sock.patch
 	patches.kernel.org/6.15.8-153-net-vlan-fix-VLAN-0-refcount-imbalance-of-togg.patch
+	patches.kernel.org/6.15.8-154-net-bridge-Do-not-offload-IGMP-MLD-messages.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
