--- a/series.conf
+++ b/series.conf
@@ -2154,6 +2154,7 @@
 	patches.kernel.org/6.15.8-041-ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix-.patch
 	patches.kernel.org/6.15.8-042-io_uring-poll-fix-POLLERR-handling.patch
 	patches.kernel.org/6.15.8-043-Fix-SMB311-posix-special-file-creation-to-serv.patch
+	patches.kernel.org/6.15.8-044-mptcp-make-fallback-action-and-fallback-decisi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
