--- a/series.conf
+++ b/series.conf
@@ -2194,6 +2194,7 @@
 	patches.kernel.org/6.15.8-081-iio-adc-adi-axi-adc-fix-ad7606_bus_reg_read.patch
 	patches.kernel.org/6.15.8-082-iio-adc-axp20x_adc-Add-missing-sentinel-to-AXP.patch
 	patches.kernel.org/6.15.8-083-iio-adc-max1363-Fix-MAX1363_4X_CHANS-MAX1363_8.patch
+	patches.kernel.org/6.15.8-084-iio-adc-max1363-Reorder-mode_list-entries.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
