soundwire: amd: fix for clearing command status register (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2211,6 +2211,7 @@
 	patches.kernel.org/6.15.8-098-arm64-dts-rockchip-Add-cd-gpios-for-sdcard-det.patch
 	patches.kernel.org/6.15.8-099-soundwire-amd-fix-for-handling-slave-alerts-af.patch
 	patches.kernel.org/6.15.8-100-phy-use-per-PHY-lockdep-keys.patch
+	patches.kernel.org/6.15.8-101-soundwire-amd-fix-for-clearing-command-status-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
