--- a/series.conf
+++ b/series.conf
@@ -2167,6 +2167,7 @@
 	patches.kernel.org/6.15.8-054-arm64-dts-imx8mp-venice-gw73xx-fix-TPM-SPI-fre.patch
 	patches.kernel.org/6.15.8-055-arm64-dts-rockchip-list-all-CPU-supplies-on-Ar.patch
 	patches.kernel.org/6.15.8-056-arm64-dts-rockchip-use-cs-gpios-for-spi1-on-ri.patch
+	patches.kernel.org/6.15.8-057-af_packet-fix-the-SO_SNDTIMEO-constraint-not-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
