block: fix kobject leak in blk_unregister_queue (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2221,6 +2221,7 @@
 	patches.kernel.org/6.15.8-108-cachefiles-Fix-the-incorrect-return-value-in-_.patch
 	patches.kernel.org/6.15.8-109-ALSA-compress_offload-tighten-ioctl-command-nu.patch
 	patches.kernel.org/6.15.8-110-net-emaclite-Fix-missing-pointer-increment-in-.patch
+	patches.kernel.org/6.15.8-111-block-fix-kobject-leak-in-blk_unregister_queue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
