--- a/series.conf
+++ b/series.conf
@@ -2280,6 +2280,7 @@
 	patches.kernel.org/6.15.8-167-usb-hub-fix-detection-of-high-tier-USB3-device.patch
 	patches.kernel.org/6.15.8-168-usb-hub-Fix-flushing-and-scheduling-of-delayed.patch
 	patches.kernel.org/6.15.8-169-usb-hub-Fix-flushing-of-delayed-work-used-for-.patch
+	patches.kernel.org/6.15.8-170-usb-hub-Don-t-try-to-recover-devices-lost-duri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
