--- a/series.conf
+++ b/series.conf
@@ -2112,6 +2112,7 @@
 	patches.kernel.org/6.15.7-192-ksmbd-fix-potential-use-after-free-in-oplock-l.patch
 	patches.kernel.org/6.15.7-193-Linux-6.15.7.patch
 	patches.kernel.org/6.15.8-001-phy-tegra-xusb-Fix-unbalanced-regulator-disabl.patch
+	patches.kernel.org/6.15.8-002-phy-tegra-xusb-Decouple-CYA_TRK_CODE_UPDATE_ON.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
