usb: hub: Fix flushing and scheduling of delayed work that tunes runtime pm (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2278,6 +2278,7 @@
 	patches.kernel.org/6.15.8-165-efivarfs-Fix-memory-leak-of-efivarfs_fs_info-i.patch
 	patches.kernel.org/6.15.8-166-sched-Change-nr_uninterruptible-type-to-unsign.patch
 	patches.kernel.org/6.15.8-167-usb-hub-fix-detection-of-high-tier-USB3-device.patch
+	patches.kernel.org/6.15.8-168-usb-hub-Fix-flushing-and-scheduling-of-delayed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
