--- a/series.conf
+++ b/series.conf
@@ -2287,6 +2287,7 @@
 	patches.kernel.org/6.15.8-174-smb-smbdirect-add-smbdirect_pdu.h-with-protoco.patch
 	patches.kernel.org/6.15.8-175-smb-client-make-use-of-common-smbdirect_pdu.h.patch
 	patches.kernel.org/6.15.8-176-smb-smbdirect-add-smbdirect.h-with-public-stru.patch
+	patches.kernel.org/6.15.8-177-smb-smbdirect-add-smbdirect_socket.h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
