--- a/series.conf
+++ b/series.conf
@@ -2214,6 +2214,7 @@
 	patches.kernel.org/6.15.8-101-soundwire-amd-fix-for-clearing-command-status-.patch
 	patches.kernel.org/6.15.8-102-arm64-dts-imx95-19x19-evk-fix-the-overshoot-is.patch
 	patches.kernel.org/6.15.8-103-arm64-dts-imx95-15x15-evk-fix-the-overshoot-is.patch
+	patches.kernel.org/6.15.8-104-arm64-dts-imx95-Correct-the-DMA-interrupter-nu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
