wifi: iwlwifi: mask reserved bits in chan_state_active_bitmap (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2217,6 +2217,7 @@
 	patches.kernel.org/6.15.8-104-arm64-dts-imx95-Correct-the-DMA-interrupter-nu.patch
 	patches.kernel.org/6.15.8-105-bpf-Reject-p-format-string-in-bprintf-like-hel.patch
 	patches.kernel.org/6.15.8-106-selftests-sched_ext-Fix-exit-selftest-hang-on-.patch
+	patches.kernel.org/6.15.8-107-wifi-iwlwifi-mask-reserved-bits-in-chan_state_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
