--- a/series.conf
+++ b/series.conf
@@ -2160,6 +2160,7 @@
 	patches.kernel.org/6.15.8-047-phonet-pep-Move-call-to-pn_skb_get_dst_sockadd.patch
 	patches.kernel.org/6.15.8-048-net-mlx5-Update-the-list-of-the-PCI-supported-.patch
 	patches.kernel.org/6.15.8-049-arm64-dts-imx8mp-venice-gw74xx-fix-TPM-SPI-fre.patch
+	patches.kernel.org/6.15.8-050-arm64-dts-add-big-endian-property-back-into-wa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
