--- a/series.conf
+++ b/series.conf
@@ -2238,6 +2238,7 @@
 	patches.kernel.org/6.15.8-125-selftests-net-increase-inter-packet-timeout-in.patch
 	patches.kernel.org/6.15.8-126-hwmon-corsair-cpro-Validate-the-size-of-the-re.patch
 	patches.kernel.org/6.15.8-127-ice-add-NULL-check-in-eswitch-lag-check.patch
+	patches.kernel.org/6.15.8-128-ice-check-correct-pointer-in-fwlog-debugfs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
