--- a/series.conf
+++ b/series.conf
@@ -2187,6 +2187,7 @@
 	patches.kernel.org/6.15.8-074-smb-client-fix-use-after-free-in-crypt_message.patch
 	patches.kernel.org/6.15.8-075-soc-aspeed-lpc-snoop-Cleanup-resources-in-stac.patch
 	patches.kernel.org/6.15.8-076-soc-aspeed-lpc-snoop-Don-t-disable-channels-th.patch
+	patches.kernel.org/6.15.8-077-soundwire-Revert-soundwire-qcom-Add-set_channe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
