--- a/series.conf
+++ b/series.conf
@@ -2149,6 +2149,7 @@
 	patches.kernel.org/6.15.8-036-drm-amd-display-Disable-CRTC-degamma-LUT-for-D.patch
 	patches.kernel.org/6.15.8-037-drm-amd-display-Free-memory-allocation.patch
 	patches.kernel.org/6.15.8-038-netfs-Fix-copy-to-cache-so-that-it-performs-co.patch
+	patches.kernel.org/6.15.8-039-netfs-Fix-race-between-cache-write-completion-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
