--- a/series.conf
+++ b/series.conf
@@ -2146,6 +2146,7 @@
 	patches.kernel.org/6.15.8-033-drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the.patch
 	patches.kernel.org/6.15.8-034-drm-panfrost-Fix-scheduler-workqueue-bug.patch
 	patches.kernel.org/6.15.8-035-drm-amdgpu-Increase-reset-counter-only-on-succ.patch
+	patches.kernel.org/6.15.8-036-drm-amd-display-Disable-CRTC-degamma-LUT-for-D.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
