--- a/series.conf
+++ b/series.conf
@@ -2113,6 +2113,7 @@
 	patches.kernel.org/6.15.7-193-Linux-6.15.7.patch
 	patches.kernel.org/6.15.8-001-phy-tegra-xusb-Fix-unbalanced-regulator-disabl.patch
 	patches.kernel.org/6.15.8-002-phy-tegra-xusb-Decouple-CYA_TRK_CODE_UPDATE_ON.patch
+	patches.kernel.org/6.15.8-003-phy-tegra-xusb-Disable-periodic-tracking-on-Te.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
