--- a/series.conf
+++ b/series.conf
@@ -2142,6 +2142,7 @@
 	patches.kernel.org/6.15.8-029-tracing-Add-down_write-trace_event_sem-when-ad.patch
 	patches.kernel.org/6.15.8-030-tracing-osnoise-Fix-crash-in-timerlat_dump_sta.patch
 	patches.kernel.org/6.15.8-031-rust-init-Fix-generics-in-_init-macros.patch
+	patches.kernel.org/6.15.8-032-objtool-rust-add-one-more-noreturn-Rust-functi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
