--- a/series.conf
+++ b/series.conf
@@ -2119,6 +2119,7 @@
 	patches.kernel.org/6.15.8-006-USB-serial-ftdi_sio-add-support-for-NDI-EMGUID.patch
 	patches.kernel.org/6.15.8-007-usb-musb-fix-gadget-state-on-disconnect.patch
 	patches.kernel.org/6.15.8-008-usb-dwc2-gadget-Fix-enter-to-hibernation-for-U.patch
+	patches.kernel.org/6.15.8-009-usb-gadget-configfs-Fix-OOB-read-on-empty-stri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
