drm/xe: Move page fault init after topology init (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2296,6 +2296,7 @@
 	patches.kernel.org/6.15.8-183-sched-freezer-Remove-unnecessary-warning-in-__.patch
 	patches.kernel.org/6.15.8-184-sched-ext-Prevent-update_locked_rq-calls-with-.patch
 	patches.kernel.org/6.15.8-185-drm-xe-mocs-Initialize-MOCS-index-early.patch
+	patches.kernel.org/6.15.8-186-drm-xe-Move-page-fault-init-after-topology-ini.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
