--- a/series.conf
+++ b/series.conf
@@ -2170,6 +2170,7 @@
 	patches.kernel.org/6.15.8-057-af_packet-fix-the-SO_SNDTIMEO-constraint-not-e.patch
 	patches.kernel.org/6.15.8-058-af_packet-fix-soft-lockup-issue-caused-by-tpac.patch
 	patches.kernel.org/6.15.8-059-Bluetooth-btintel-Check-if-controller-is-ISO-c.patch
+	patches.kernel.org/6.15.8-060-cpuidle-psci-Fix-cpuhotplug-routine-with-PREEM.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
