--- a/series.conf
+++ b/series.conf
@@ -2236,6 +2236,7 @@
 	patches.kernel.org/6.15.8-123-wifi-cfg80211-remove-scan-request-n_channels-c.patch
 	patches.kernel.org/6.15.8-124-can-tcan4x5x-fix-reset-gpio-usage-during-probe.patch
 	patches.kernel.org/6.15.8-125-selftests-net-increase-inter-packet-timeout-in.patch
+	patches.kernel.org/6.15.8-126-hwmon-corsair-cpro-Validate-the-size-of-the-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
