--- a/series.conf
+++ b/series.conf
@@ -2289,6 +2289,7 @@
 	patches.kernel.org/6.15.8-176-smb-smbdirect-add-smbdirect.h-with-public-stru.patch
 	patches.kernel.org/6.15.8-177-smb-smbdirect-add-smbdirect_socket.h.patch
 	patches.kernel.org/6.15.8-178-smb-client-make-use-of-common-smbdirect_socket.patch
+	patches.kernel.org/6.15.8-179-smb-smbdirect-introduce-smbdirect_socket_param.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
