ipv6: mcast: Delay put pmc->idev in mld_del_delrec() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2253,6 +2253,7 @@
 	patches.kernel.org/6.15.8-140-Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM-.patch
 	patches.kernel.org/6.15.8-141-net-mlx5-Correctly-set-gso_size-when-LRO-is-us.patch
 	patches.kernel.org/6.15.8-142-net-airoha-fix-potential-use-after-free-in-air.patch
+	patches.kernel.org/6.15.8-143-ipv6-mcast-Delay-put-pmc-idev-in-mld_del_delre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
