usb: hub: fix detection of high tier USB3 devices behind suspended hubs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2277,6 +2277,7 @@
 	patches.kernel.org/6.15.8-164-libbpf-Fix-handling-of-BPF-arena-relocations.patch
 	patches.kernel.org/6.15.8-165-efivarfs-Fix-memory-leak-of-efivarfs_fs_info-i.patch
 	patches.kernel.org/6.15.8-166-sched-Change-nr_uninterruptible-type-to-unsign.patch
+	patches.kernel.org/6.15.8-167-usb-hub-fix-detection-of-high-tier-USB3-device.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
