--- a/series.conf
+++ b/series.conf
@@ -2141,6 +2141,7 @@
 	patches.kernel.org/6.15.8-028-tracing-probes-Avoid-using-params-uninitialize.patch
 	patches.kernel.org/6.15.8-029-tracing-Add-down_write-trace_event_sem-when-ad.patch
 	patches.kernel.org/6.15.8-030-tracing-osnoise-Fix-crash-in-timerlat_dump_sta.patch
+	patches.kernel.org/6.15.8-031-rust-init-Fix-generics-in-_init-macros.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
