--- a/series.conf
+++ b/series.conf
@@ -2198,6 +2198,7 @@
 	patches.kernel.org/6.15.8-085-iio-adc-stm32-adc-Fix-race-in-installing-chain.patch
 	patches.kernel.org/6.15.8-086-iio-backend-fix-out-of-bound-write.patch
 	patches.kernel.org/6.15.8-087-iio-common-st_sensors-Fix-use-of-uninitialize-.patch
+	patches.kernel.org/6.15.8-088-comedi-pcl812-Fix-bit-shift-out-of-bounds.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
