comedi: aio_iiro_16: Fix bit shift out of bounds (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2199,6 +2199,7 @@
 	patches.kernel.org/6.15.8-086-iio-backend-fix-out-of-bound-write.patch
 	patches.kernel.org/6.15.8-087-iio-common-st_sensors-Fix-use-of-uninitialize-.patch
 	patches.kernel.org/6.15.8-088-comedi-pcl812-Fix-bit-shift-out-of-bounds.patch
+	patches.kernel.org/6.15.8-089-comedi-aio_iiro_16-Fix-bit-shift-out-of-bounds.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
