--- a/series.conf
+++ b/series.conf
@@ -2115,6 +2115,7 @@
 	patches.kernel.org/6.15.8-002-phy-tegra-xusb-Decouple-CYA_TRK_CODE_UPDATE_ON.patch
 	patches.kernel.org/6.15.8-003-phy-tegra-xusb-Disable-periodic-tracking-on-Te.patch
 	patches.kernel.org/6.15.8-004-USB-serial-option-add-Telit-Cinterion-FE910C04.patch
+	patches.kernel.org/6.15.8-005-USB-serial-option-add-Foxconn-T99W640.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
