--- a/series.conf
+++ b/series.conf
@@ -2293,6 +2293,7 @@
 	patches.kernel.org/6.15.8-180-smb-client-make-use-of-common-smbdirect_socket.patch
 	patches.kernel.org/6.15.8-181-cifs-Fix-the-smbd_response-slab-to-allow-userc.patch
 	patches.kernel.org/6.15.8-182-cifs-Fix-reading-into-an-ITER_FOLIOQ-from-the-.patch
+	patches.kernel.org/6.15.8-183-sched-freezer-Remove-unnecessary-warning-in-__.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
