--- a/series.conf
+++ b/series.conf
@@ -2297,6 +2297,7 @@
 	patches.kernel.org/6.15.8-184-sched-ext-Prevent-update_locked_rq-calls-with-.patch
 	patches.kernel.org/6.15.8-185-drm-xe-mocs-Initialize-MOCS-index-early.patch
 	patches.kernel.org/6.15.8-186-drm-xe-Move-page-fault-init-after-topology-ini.patch
+	patches.kernel.org/6.15.8-187-smb-client-let-smbd_post_send_iter-respect-the.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
