drm/xe/pf: Resend PF provisioning after GT reset (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2258,6 +2258,7 @@
 	patches.kernel.org/6.15.8-145-netfilter-nf_conntrack-fix-crash-due-to-remova.patch
 	patches.kernel.org/6.15.8-146-drm-xe-Dont-skip-TLB-invalidations-on-VF.patch
 	patches.kernel.org/6.15.8-147-drm-xe-pf-Prepare-to-stop-SR-IOV-support-prior.patch
+	patches.kernel.org/6.15.8-148-drm-xe-pf-Resend-PF-provisioning-after-GT-rese.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
