ALSA: hda/realtek - Fix mute LED for HP Victus 16-r0xxx (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2150,6 +2150,7 @@
 	patches.kernel.org/6.15.8-037-drm-amd-display-Free-memory-allocation.patch
 	patches.kernel.org/6.15.8-038-netfs-Fix-copy-to-cache-so-that-it-performs-co.patch
 	patches.kernel.org/6.15.8-039-netfs-Fix-race-between-cache-write-completion-.patch
+	patches.kernel.org/6.15.8-040-ALSA-hda-realtek-Fix-mute-LED-for-HP-Victus-16.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
