--- a/series.conf
+++ b/series.conf
@@ -2223,6 +2223,7 @@
 	patches.kernel.org/6.15.8-110-net-emaclite-Fix-missing-pointer-increment-in-.patch
 	patches.kernel.org/6.15.8-111-block-fix-kobject-leak-in-blk_unregister_queue.patch
 	patches.kernel.org/6.15.8-112-net-sched-sch_qfq-Fix-race-condition-on-qfq_ag.patch
+	patches.kernel.org/6.15.8-113-rpl-Fix-use-after-free-in-rpl_do_srh_inline.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
