--- a/series.conf
+++ b/series.conf
@@ -2189,6 +2189,7 @@
 	patches.kernel.org/6.15.8-076-soc-aspeed-lpc-snoop-Don-t-disable-channels-th.patch
 	patches.kernel.org/6.15.8-077-soundwire-Revert-soundwire-qcom-Add-set_channe.patch
 	patches.kernel.org/6.15.8-078-xfs-don-t-allocate-the-xfs_extent_busy-structu.patch
+	patches.kernel.org/6.15.8-079-iio-accel-fxls8962af-Fix-use-after-free-in-fxl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
