--- a/series.conf
+++ b/series.conf
@@ -2159,6 +2159,7 @@
 	patches.kernel.org/6.15.8-046-mptcp-reset-fallback-status-gracefully-at-disc.patch
 	patches.kernel.org/6.15.8-047-phonet-pep-Move-call-to-pn_skb_get_dst_sockadd.patch
 	patches.kernel.org/6.15.8-048-net-mlx5-Update-the-list-of-the-PCI-supported-.patch
+	patches.kernel.org/6.15.8-049-arm64-dts-imx8mp-venice-gw74xx-fix-TPM-SPI-fre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
