--- a/series.conf
+++ b/series.conf
@@ -2130,6 +2130,7 @@
 	patches.kernel.org/6.15.8-017-Revert-staging-vchiq_arm-Create-keep-alive-thr.patch
 	patches.kernel.org/6.15.8-018-nvmem-imx-ocotp-fix-MAC-address-byte-length.patch
 	patches.kernel.org/6.15.8-019-nvmem-layouts-u-boot-env-remove-crc32-endianne.patch
+	patches.kernel.org/6.15.8-020-Input-xpad-set-correct-controller-type-for-Ace.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
