HID: core: ensure the allocated report buffer can contain the reserved report ID (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2135,6 +2135,7 @@
 	patches.kernel.org/6.15.8-022-spi-Add-check-for-8-bit-transfer-with-8-IO-mod.patch
 	patches.kernel.org/6.15.8-023-tools-hv-fcopy-Fix-irregularities-with-size-of.patch
 	patches.kernel.org/6.15.8-024-dm-bufio-fix-sched-in-atomic-context.patch
+	patches.kernel.org/6.15.8-025-HID-core-ensure-the-allocated-report-buffer-ca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
