--- a/series.conf
+++ b/series.conf
@@ -2270,6 +2270,7 @@
 	patches.kernel.org/6.15.8-157-rxrpc-Fix-recv-recv-race-of-completed-call.patch
 	patches.kernel.org/6.15.8-158-rxrpc-Fix-notification-vs-call-release-vs-recv.patch
 	patches.kernel.org/6.15.8-159-rxrpc-Fix-transmission-of-an-abort-in-response.patch
+	patches.kernel.org/6.15.8-160-rxrpc-Fix-to-use-conn-aborts-for-conn-wide-fai.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
