Revert "staging: vchiq_arm: Create keep-alive thread during probe" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2127,6 +2127,7 @@
 	patches.kernel.org/6.15.8-014-thunderbolt-Fix-wake-on-connect-at-runtime.patch
 	patches.kernel.org/6.15.8-015-thunderbolt-Fix-bit-masking-in-tb_dp_port_set_.patch
 	patches.kernel.org/6.15.8-016-Revert-staging-vchiq_arm-Improve-initial-VCHIQ.patch
+	patches.kernel.org/6.15.8-017-Revert-staging-vchiq_arm-Create-keep-alive-thr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
