--- a/series.conf
+++ b/series.conf
@@ -2134,6 +2134,7 @@
 	patches.kernel.org/6.15.8-021-pch_uart-Fix-dma_sync_sg_for_device-nents-valu.patch
 	patches.kernel.org/6.15.8-022-spi-Add-check-for-8-bit-transfer-with-8-IO-mod.patch
 	patches.kernel.org/6.15.8-023-tools-hv-fcopy-Fix-irregularities-with-size-of.patch
+	patches.kernel.org/6.15.8-024-dm-bufio-fix-sched-in-atomic-context.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
