phy: tegra: xusb: Fix unbalanced regulator disable in UTMI PHY mode (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2111,6 +2111,7 @@
 	patches.kernel.org/6.15.7-191-x86-sev-Use-TSC_FACTOR-for-Secure-TSC-frequenc.patch
 	patches.kernel.org/6.15.7-192-ksmbd-fix-potential-use-after-free-in-oplock-l.patch
 	patches.kernel.org/6.15.7-193-Linux-6.15.7.patch
+	patches.kernel.org/6.15.8-001-phy-tegra-xusb-Fix-unbalanced-regulator-disabl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
