arm64: dts: imx8mp-venice-gw71xx: fix TPM SPI frequency (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2162,6 +2162,7 @@
 	patches.kernel.org/6.15.8-049-arm64-dts-imx8mp-venice-gw74xx-fix-TPM-SPI-fre.patch
 	patches.kernel.org/6.15.8-050-arm64-dts-add-big-endian-property-back-into-wa.patch
 	patches.kernel.org/6.15.8-051-arm64-dts-freescale-imx8mm-verdin-Keep-LDO5-al.patch
+	patches.kernel.org/6.15.8-052-arm64-dts-imx8mp-venice-gw71xx-fix-TPM-SPI-fre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
