--- a/series.conf
+++ b/series.conf
@@ -2257,6 +2257,7 @@
 	patches.kernel.org/6.15.8-144-net-fix-segmentation-after-TCP-UDP-fraglist-GR.patch
 	patches.kernel.org/6.15.8-145-netfilter-nf_conntrack-fix-crash-due-to-remova.patch
 	patches.kernel.org/6.15.8-146-drm-xe-Dont-skip-TLB-invalidations-on-VF.patch
+	patches.kernel.org/6.15.8-147-drm-xe-pf-Prepare-to-stop-SR-IOV-support-prior.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
