comedi: das16m1: Fix bit shift out of bounds (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2200,6 +2200,7 @@
 	patches.kernel.org/6.15.8-087-iio-common-st_sensors-Fix-use-of-uninitialize-.patch
 	patches.kernel.org/6.15.8-088-comedi-pcl812-Fix-bit-shift-out-of-bounds.patch
 	patches.kernel.org/6.15.8-089-comedi-aio_iiro_16-Fix-bit-shift-out-of-bounds.patch
+	patches.kernel.org/6.15.8-090-comedi-das16m1-Fix-bit-shift-out-of-bounds.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
