--- a/series.conf
+++ b/series.conf
@@ -2174,6 +2174,7 @@
 	patches.kernel.org/6.15.8-061-dmaengine-mediatek-Fix-a-flag-reuse-error-in-m.patch
 	patches.kernel.org/6.15.8-062-dmaengine-nbpfaxi-Fix-memory-corruption-in-pro.patch
 	patches.kernel.org/6.15.8-063-isofs-Verify-inode-mode-when-loading-from-disk.patch
+	patches.kernel.org/6.15.8-064-memstick-core-Zero-initialize-id_reg-in-h_mems.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
