--- a/series.conf
+++ b/series.conf
@@ -2138,6 +2138,7 @@
 	patches.kernel.org/6.15.8-025-HID-core-ensure-the-allocated-report-buffer-ca.patch
 	patches.kernel.org/6.15.8-026-HID-core-ensure-__hid_request-reserves-the-rep.patch
 	patches.kernel.org/6.15.8-027-HID-core-do-not-bypass-hid_hw_raw_request.patch
+	patches.kernel.org/6.15.8-028-tracing-probes-Avoid-using-params-uninitialize.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
