--- a/series.conf
+++ b/series.conf
@@ -2205,6 +2205,7 @@
 	patches.kernel.org/6.15.8-092-comedi-comedi_test-Fix-possible-deletion-of-un.patch
 	patches.kernel.org/6.15.8-093-comedi-Fail-COMEDI_INSNLIST-ioctl-if-n_insns-i.patch
 	patches.kernel.org/6.15.8-094-comedi-Fix-some-signed-shift-left-operations.patch
+	patches.kernel.org/6.15.8-095-comedi-Fix-use-of-uninitialized-data-in-insn_r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
