--- a/series.conf
+++ b/series.conf
@@ -2216,6 +2216,7 @@
 	patches.kernel.org/6.15.8-103-arm64-dts-imx95-15x15-evk-fix-the-overshoot-is.patch
 	patches.kernel.org/6.15.8-104-arm64-dts-imx95-Correct-the-DMA-interrupter-nu.patch
 	patches.kernel.org/6.15.8-105-bpf-Reject-p-format-string-in-bprintf-like-hel.patch
+	patches.kernel.org/6.15.8-106-selftests-sched_ext-Fix-exit-selftest-hang-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
