iio: backend: fix out-of-bound write (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2196,6 +2196,7 @@
 	patches.kernel.org/6.15.8-083-iio-adc-max1363-Fix-MAX1363_4X_CHANS-MAX1363_8.patch
 	patches.kernel.org/6.15.8-084-iio-adc-max1363-Reorder-mode_list-entries.patch
 	patches.kernel.org/6.15.8-085-iio-adc-stm32-adc-Fix-race-in-installing-chain.patch
+	patches.kernel.org/6.15.8-086-iio-backend-fix-out-of-bound-write.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
