--- a/series.conf
+++ b/series.conf
@@ -2248,6 +2248,7 @@
 	patches.kernel.org/6.15.8-135-Bluetooth-SMP-If-an-unallowed-command-is-recei.patch
 	patches.kernel.org/6.15.8-136-Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_.patch
 	patches.kernel.org/6.15.8-137-Bluetooth-hci_core-fix-typos-in-macros.patch
+	patches.kernel.org/6.15.8-138-Bluetooth-hci_core-add-missing-braces-when-usi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
