rxrpc: Fix recv-recv race of completed call (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2267,6 +2267,7 @@
 	patches.kernel.org/6.15.8-154-net-bridge-Do-not-offload-IGMP-MLD-messages.patch
 	patches.kernel.org/6.15.8-155-net-sched-Return-NULL-when-htb_lookup_leaf-enc.patch
 	patches.kernel.org/6.15.8-156-rxrpc-Fix-irq-disabled-in-local_bh_enable.patch
+	patches.kernel.org/6.15.8-157-rxrpc-Fix-recv-recv-race-of-completed-call.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
