--- a/series.conf
+++ b/series.conf
@@ -2266,6 +2266,7 @@
 	patches.kernel.org/6.15.8-153-net-vlan-fix-VLAN-0-refcount-imbalance-of-togg.patch
 	patches.kernel.org/6.15.8-154-net-bridge-Do-not-offload-IGMP-MLD-messages.patch
 	patches.kernel.org/6.15.8-155-net-sched-Return-NULL-when-htb_lookup_leaf-enc.patch
+	patches.kernel.org/6.15.8-156-rxrpc-Fix-irq-disabled-in-local_bh_enable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
