usb: dwc3: qcom: Don't leave BCR asserted (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2281,6 +2281,7 @@
 	patches.kernel.org/6.15.8-168-usb-hub-Fix-flushing-and-scheduling-of-delayed.patch
 	patches.kernel.org/6.15.8-169-usb-hub-Fix-flushing-of-delayed-work-used-for-.patch
 	patches.kernel.org/6.15.8-170-usb-hub-Don-t-try-to-recover-devices-lost-duri.patch
+	patches.kernel.org/6.15.8-171-usb-dwc3-qcom-Don-t-leave-BCR-asserted.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
