--- a/series.conf
+++ b/series.conf
@@ -2251,6 +2251,7 @@
 	patches.kernel.org/6.15.8-138-Bluetooth-hci_core-add-missing-braces-when-usi.patch
 	patches.kernel.org/6.15.8-139-Bluetooth-hci_dev-replace-quirks-integer-by-qu.patch
 	patches.kernel.org/6.15.8-140-Bluetooth-btusb-QCA-Fix-downloading-wrong-NVM-.patch
+	patches.kernel.org/6.15.8-141-net-mlx5-Correctly-set-gso_size-when-LRO-is-us.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
