arm64: dts: rockchip: list all CPU supplies on ArmSoM Sige5 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2165,6 +2165,7 @@
 	patches.kernel.org/6.15.8-052-arm64-dts-imx8mp-venice-gw71xx-fix-TPM-SPI-fre.patch
 	patches.kernel.org/6.15.8-053-arm64-dts-imx8mp-venice-gw72xx-fix-TPM-SPI-fre.patch
 	patches.kernel.org/6.15.8-054-arm64-dts-imx8mp-venice-gw73xx-fix-TPM-SPI-fre.patch
+	patches.kernel.org/6.15.8-055-arm64-dts-rockchip-list-all-CPU-supplies-on-Ar.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
