Bluetooth: hci_core: fix typos in macros (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2247,6 +2247,7 @@
 	patches.kernel.org/6.15.8-134-Bluetooth-hci_sync-fix-connectable-extended-ad.patch
 	patches.kernel.org/6.15.8-135-Bluetooth-SMP-If-an-unallowed-command-is-recei.patch
 	patches.kernel.org/6.15.8-136-Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_.patch
+	patches.kernel.org/6.15.8-137-Bluetooth-hci_core-fix-typos-in-macros.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
