iio: adc: axp20x_adc: Add missing sentinel to AXP717 ADC channel maps (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2192,6 +2192,7 @@
 	patches.kernel.org/6.15.8-079-iio-accel-fxls8962af-Fix-use-after-free-in-fxl.patch
 	patches.kernel.org/6.15.8-080-iio-adc-ad7380-fix-adi-gain-milli-property-par.patch
 	patches.kernel.org/6.15.8-081-iio-adc-adi-axi-adc-fix-ad7606_bus_reg_read.patch
+	patches.kernel.org/6.15.8-082-iio-adc-axp20x_adc-Add-missing-sentinel-to-AXP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
