net: libwx: fix multicast packets received count (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2282,6 +2282,7 @@
 	patches.kernel.org/6.15.8-169-usb-hub-Fix-flushing-of-delayed-work-used-for-.patch
 	patches.kernel.org/6.15.8-170-usb-hub-Don-t-try-to-recover-devices-lost-duri.patch
 	patches.kernel.org/6.15.8-171-usb-dwc3-qcom-Don-t-leave-BCR-asserted.patch
+	patches.kernel.org/6.15.8-172-net-libwx-fix-multicast-packets-received-count.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
