loop: use kiocb helpers to fix lockdep warning (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2240,6 +2240,7 @@
 	patches.kernel.org/6.15.8-127-ice-add-NULL-check-in-eswitch-lag-check.patch
 	patches.kernel.org/6.15.8-128-ice-check-correct-pointer-in-fwlog-debugfs.patch
 	patches.kernel.org/6.15.8-129-usb-net-sierra-check-for-no-status-endpoint.patch
+	patches.kernel.org/6.15.8-130-loop-use-kiocb-helpers-to-fix-lockdep-warning.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
