rust: use `#[used(compiler)]` to fix build and `modpost` with Rust >= 1.89.0 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2283,6 +2283,7 @@
 	patches.kernel.org/6.15.8-170-usb-hub-Don-t-try-to-recover-devices-lost-duri.patch
 	patches.kernel.org/6.15.8-171-usb-dwc3-qcom-Don-t-leave-BCR-asserted.patch
 	patches.kernel.org/6.15.8-172-net-libwx-fix-multicast-packets-received-count.patch
+	patches.kernel.org/6.15.8-173-rust-use-used-compiler-to-fix-build-and-modpos.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
