tracing: Add down_write(trace_event_sem) when adding trace event (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2139,6 +2139,7 @@
 	patches.kernel.org/6.15.8-026-HID-core-ensure-__hid_request-reserves-the-rep.patch
 	patches.kernel.org/6.15.8-027-HID-core-do-not-bypass-hid_hw_raw_request.patch
 	patches.kernel.org/6.15.8-028-tracing-probes-Avoid-using-params-uninitialize.patch
+	patches.kernel.org/6.15.8-029-tracing-Add-down_write-trace_event_sem-when-ad.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
