arm64: dts: rockchip: use cs-gpios for spi1 on ringneck (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2166,6 +2166,7 @@
 	patches.kernel.org/6.15.8-053-arm64-dts-imx8mp-venice-gw72xx-fix-TPM-SPI-fre.patch
 	patches.kernel.org/6.15.8-054-arm64-dts-imx8mp-venice-gw73xx-fix-TPM-SPI-fre.patch
 	patches.kernel.org/6.15.8-055-arm64-dts-rockchip-list-all-CPU-supplies-on-Ar.patch
+	patches.kernel.org/6.15.8-056-arm64-dts-rockchip-use-cs-gpios-for-spi1-on-ri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
