s390/bpf: Fix bpf_arch_text_poke() with new_addr == NULL again (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2183,6 +2183,7 @@
 	patches.kernel.org/6.15.8-070-net-libwx-fix-the-using-of-Rx-buffer-DMA.patch
 	patches.kernel.org/6.15.8-071-net-libwx-properly-reset-Rx-ring-descriptor.patch
 	patches.kernel.org/6.15.8-072-pmdomain-governor-Consider-CPU-latency-toleran.patch
+	patches.kernel.org/6.15.8-073-s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
