i2c: omap: Handle omap_i2c_init() errors in omap_i2c_probe() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2122,6 +2122,7 @@
 	patches.kernel.org/6.15.8-009-usb-gadget-configfs-Fix-OOB-read-on-empty-stri.patch
 	patches.kernel.org/6.15.8-010-i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.kernel.org/6.15.8-011-i2c-stm32f7-unmap-DMA-mapped-buffer.patch
+	patches.kernel.org/6.15.8-012-i2c-omap-Handle-omap_i2c_init-errors-in-omap_i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
