iio: common: st_sensors: Fix use of uninitialize device structs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2197,6 +2197,7 @@
 	patches.kernel.org/6.15.8-084-iio-adc-max1363-Reorder-mode_list-entries.patch
 	patches.kernel.org/6.15.8-085-iio-adc-stm32-adc-Fix-race-in-installing-chain.patch
 	patches.kernel.org/6.15.8-086-iio-backend-fix-out-of-bound-write.patch
+	patches.kernel.org/6.15.8-087-iio-common-st_sensors-Fix-use-of-uninitialize-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
