soc: aspeed: lpc-snoop: Don't disable channels that aren't enabled (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2186,6 +2186,7 @@
 	patches.kernel.org/6.15.8-073-s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-.patch
 	patches.kernel.org/6.15.8-074-smb-client-fix-use-after-free-in-crypt_message.patch
 	patches.kernel.org/6.15.8-075-soc-aspeed-lpc-snoop-Cleanup-resources-in-stac.patch
+	patches.kernel.org/6.15.8-076-soc-aspeed-lpc-snoop-Don-t-disable-channels-th.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
