Bluetooth: SMP: Fix using HCI_ERROR_REMOTE_USER_TERM on timeout (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2246,6 +2246,7 @@
 	patches.kernel.org/6.15.8-133-Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_res.patch
 	patches.kernel.org/6.15.8-134-Bluetooth-hci_sync-fix-connectable-extended-ad.patch
 	patches.kernel.org/6.15.8-135-Bluetooth-SMP-If-an-unallowed-command-is-recei.patch
+	patches.kernel.org/6.15.8-136-Bluetooth-SMP-Fix-using-HCI_ERROR_REMOTE_USER_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
