dmaengine: nbpfaxi: Fix memory corruption in probe() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2172,6 +2172,7 @@
 	patches.kernel.org/6.15.8-059-Bluetooth-btintel-Check-if-controller-is-ISO-c.patch
 	patches.kernel.org/6.15.8-060-cpuidle-psci-Fix-cpuhotplug-routine-with-PREEM.patch
 	patches.kernel.org/6.15.8-061-dmaengine-mediatek-Fix-a-flag-reuse-error-in-m.patch
+	patches.kernel.org/6.15.8-062-dmaengine-nbpfaxi-Fix-memory-corruption-in-pro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
