Revert "cgroup_freezer: cgroup_freezing: Check if not frozen" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2271,6 +2271,7 @@
 	patches.kernel.org/6.15.8-158-rxrpc-Fix-notification-vs-call-release-vs-recv.patch
 	patches.kernel.org/6.15.8-159-rxrpc-Fix-transmission-of-an-abort-in-response.patch
 	patches.kernel.org/6.15.8-160-rxrpc-Fix-to-use-conn-aborts-for-conn-wide-fai.patch
+	patches.kernel.org/6.15.8-161-Revert-cgroup_freezer-cgroup_freezing-Check-if.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
