libbpf: Fix handling of BPF arena relocations (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2274,6 +2274,7 @@
 	patches.kernel.org/6.15.8-161-Revert-cgroup_freezer-cgroup_freezing-Check-if.patch
 	patches.kernel.org/6.15.8-162-drm-mediatek-Add-wait_event_timeout-when-disab.patch
 	patches.kernel.org/6.15.8-163-drm-mediatek-only-announce-AFBC-if-really-supp.patch
+	patches.kernel.org/6.15.8-164-libbpf-Fix-handling-of-BPF-arena-relocations.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
