thunderbolt: Fix bit masking in tb_dp_port_set_hops() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2125,6 +2125,7 @@
 	patches.kernel.org/6.15.8-012-i2c-omap-Handle-omap_i2c_init-errors-in-omap_i.patch
 	patches.kernel.org/6.15.8-013-i2c-omap-Fix-an-error-handling-path-in-omap_i2.patch
 	patches.kernel.org/6.15.8-014-thunderbolt-Fix-wake-on-connect-at-runtime.patch
+	patches.kernel.org/6.15.8-015-thunderbolt-Fix-bit-masking-in-tb_dp_port_set_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
