wifi: cfg80211: remove scan request n_channels counted_by (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2233,6 +2233,7 @@
 	patches.kernel.org/6.15.8-120-nvme-revert-the-cross-controller-atomic-write-.patch
 	patches.kernel.org/6.15.8-121-nvme-fix-misaccounting-of-nvme-mpath-inflight-.patch
 	patches.kernel.org/6.15.8-122-nvmet-tcp-fix-callback-lock-for-TLS-handshake.patch
+	patches.kernel.org/6.15.8-123-wifi-cfg80211-remove-scan-request-n_channels-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
