pch_uart: Fix dma_sync_sg_for_device() nents value (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2131,6 +2131,7 @@
 	patches.kernel.org/6.15.8-018-nvmem-imx-ocotp-fix-MAC-address-byte-length.patch
 	patches.kernel.org/6.15.8-019-nvmem-layouts-u-boot-env-remove-crc32-endianne.patch
 	patches.kernel.org/6.15.8-020-Input-xpad-set-correct-controller-type-for-Ace.patch
+	patches.kernel.org/6.15.8-021-pch_uart-Fix-dma_sync_sg_for_device-nents-valu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
