arm64: dts: imx95-15x15-evk: fix the overshoot issue of NETC (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2213,6 +2213,7 @@
 	patches.kernel.org/6.15.8-100-phy-use-per-PHY-lockdep-keys.patch
 	patches.kernel.org/6.15.8-101-soundwire-amd-fix-for-clearing-command-status-.patch
 	patches.kernel.org/6.15.8-102-arm64-dts-imx95-19x19-evk-fix-the-overshoot-is.patch
+	patches.kernel.org/6.15.8-103-arm64-dts-imx95-15x15-evk-fix-the-overshoot-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
