drm/amd/display: Free memory allocation (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2147,6 +2147,7 @@
 	patches.kernel.org/6.15.8-034-drm-panfrost-Fix-scheduler-workqueue-bug.patch
 	patches.kernel.org/6.15.8-035-drm-amdgpu-Increase-reset-counter-only-on-succ.patch
 	patches.kernel.org/6.15.8-036-drm-amd-display-Disable-CRTC-degamma-LUT-for-D.patch
+	patches.kernel.org/6.15.8-037-drm-amd-display-Free-memory-allocation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
