iio: adc: ad7380: fix adi,gain-milli property parsing (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2190,6 +2190,7 @@
 	patches.kernel.org/6.15.8-077-soundwire-Revert-soundwire-qcom-Add-set_channe.patch
 	patches.kernel.org/6.15.8-078-xfs-don-t-allocate-the-xfs_extent_busy-structu.patch
 	patches.kernel.org/6.15.8-079-iio-accel-fxls8962af-Fix-use-after-free-in-fxl.patch
+	patches.kernel.org/6.15.8-080-iio-adc-ad7380-fix-adi-gain-milli-property-par.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
