net: stmmac: intel: populate entire system_counterval_t in get_time_fn() callback (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2178,6 +2178,7 @@
 	patches.kernel.org/6.15.8-065-mmc-bcm2835-Fix-dma_unmap_sg-nents-value.patch
 	patches.kernel.org/6.15.8-066-mmc-sdhci-pci-Quirk-for-broken-command-queuing.patch
 	patches.kernel.org/6.15.8-067-mmc-sdhci_am654-Workaround-for-Errata-i2312.patch
+	patches.kernel.org/6.15.8-068-net-stmmac-intel-populate-entire-system_counte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
