i2c: omap: Fix an error handling path in omap_i2c_probe() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2123,6 +2123,7 @@
 	patches.kernel.org/6.15.8-010-i2c-stm32-fix-the-device-used-for-the-DMA-map.patch
 	patches.kernel.org/6.15.8-011-i2c-stm32f7-unmap-DMA-mapped-buffer.patch
 	patches.kernel.org/6.15.8-012-i2c-omap-Handle-omap_i2c_init-errors-in-omap_i.patch
+	patches.kernel.org/6.15.8-013-i2c-omap-Fix-an-error-handling-path-in-omap_i2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
