usb: hub: Fix flushing of delayed work used for post resume purposes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2279,6 +2279,7 @@
 	patches.kernel.org/6.15.8-166-sched-Change-nr_uninterruptible-type-to-unsign.patch
 	patches.kernel.org/6.15.8-167-usb-hub-fix-detection-of-high-tier-USB3-device.patch
 	patches.kernel.org/6.15.8-168-usb-hub-Fix-flushing-and-scheduling-of-delayed.patch
+	patches.kernel.org/6.15.8-169-usb-hub-Fix-flushing-of-delayed-work-used-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
